# prorail-thesis

./: .gitignore  .gitmodules  README.md  azureai-setup.sh
act-impl/: CMakeLists.txt  README.md  hello_world.cc
experiments/: 01-geopandas-scaling.py
index-benchmarking/: CMakeLists.txt  README.md  run.sh
index-benchmarking/src/: 01-baseline.cpp  01-nyc-taxi.cpp  01-vpanday2020-reprod.cpp  02-aogaki-taxi.cpp  02-aogaki.cpp  02-syracuse-taxi.cpp  03-aogaki-taxi.cpp  03-germany-taxi.cpp  04-germany-taxi.cpp  04-japan-taxi.cpp  05-japan-taxi.cpp  06-synthetic-nyc.cpp  07-synthetic-tokyo.cpp  08-synthetic-delhi.cpp  09-synthetic-saopaolo.cpp  11-nyc-taxi.cpp  12-shippensburg-taxi.cpp  12-syracuse-taxi.cpp  13-aogaki-taxi.cpp  14-germany-taxi.cpp  15-japan-taxi.cpp  20-nyc-taxi.cpp  21-synthetic-nyc.cpp  22-synthetic-tokyo.cpp  23-synthetic-delhi.cpp  24-synthetic-saopaolo.cpp  31-synthetic-tokyo-nyc.cpp  32-synthetic-delhi-nyc.cpp  33-synthetic-saopaolo-nyc.cpp  geos-strtree.cpp  h3-cindex.cpp  main.cpp  s2-pointindex.cpp  s2-shapeindex.cpp  shp-utils.h
index-benchmarking/src/experiments/: experiment.h
index-benchmarking/src/experiments/geos/: common.h  quadtree.h  strtree.h
index-benchmarking/src/experiments/geos/old/: common.h  quadtree.h  strtree.h
index-benchmarking/src/experiments/s2/: common.h  pointindex.h  shapeindex.h
index-benchmarking/src/experiments/s2/old/: pointindex.h  shapeindex.h
index-benchmarking/src/geos/: common.h  quadtree.h  strtree.h
index-benchmarking/src/reprod/: geos-strtree.cpp  s2-pointindex.cpp
index-benchmarking/src/s2/: common.h  pointindex.h  s2pointindex.h
index-benchmarking/src/s2/old/: common.h
index-benchmarking/src/utils/: bin.h  data.h  exec.h  experiment.h  gdal.h  progress.h  proj.h
notebooks/: 01-problem-exploration.ipynb  02-synthetic-dataset.ipynb  experiments.ipynb  figures.ipynb  plot-point-datasets.ipynb  plot-results.ipynb  plot-taxi-datasets.ipynb  plot-taxi-results.ipynb  prorail.ipynb  regions.ipynb  utils.py
tools/: generate-nyctaxi.py  generate-taxi-datasets.py  nyc-taxi-datasets.py  nyctaxi_datasets.py  requirements.txt  synthetic-datasets.py  synthetic_datasets.py
